# gatewayz-backend

./: .dockerignore  .env.error-monitoring.example  .env.example  .env.full-sync.example  .env.sync  .env.template  .env.test  .gitguardian.yaml  .gitguardian.yml  .gitignore  .mutmut_config.py  .pre-commit-config.yaml  .railwayignore  .sonarignore  .vercelignore  AGENTS.md  ALL_FIXES_COMPLETE_SUMMARY.md  APIDOG_RUNNER_CHANGES.txt  API_KEYS_SUMMARY.txt  AUDIT_SUMMARY.txt  BACKEND_ERRORS_INVESTIGATION_2025-12-13.md  CACHE_MIGRATION_SUMMARY.md  CHANGES_SUMMARY.txt  CLAUDE.md  Dockerfile.apidog  Dockerfile.health  GITHUB_ACTIONS_AUDIT.md  Gatewayz_Cache_APIs.postman_collection.json  Gatewayz_Environment.postman_environment.json  IMPLEMENTATION_GUIDE_PRICING_PERFORMANCE_FIXES.md  INTEGRATION_EXAMPLE.py  ISSUE_1100_FIX_SUMMARY.md  LIVE_API_TESTING_GUIDE.md  OPTIMIZATION_HIGHLIGHTS.txt  PLOT_DATA_FORMAT.txt  PRICING_ANALYTICS_INTEGRATION_GUIDE.md  PRICING_AUDIT_MANIFEST.txt  PRICING_CALCULATOR_GUIDE.md  PRICING_MIGRATION_COMPLETE.md  PRICING_TRACKING_README.md  (+92 more)
.github/workflows/: add-to-project.yml  auto-merge.yml  ci.yml  claude-on-failure.yml  codex-bug-analysis.yml  codex-coverage-boost.yml  codex-performance-review.yml  codex-weekly.yml  conceptual-model-tests.yml  deploy-manual.yml.disabled  deploy-production.yml  deploy-railway-cli.yml.disabled  deploy.yml  deploy.yml.disabled  fix-ci-cursor.yml  health-monitor.yml  lint-autofix.yml  lint-pr-review.yml  lint.yml  model-health-sweep.yml  model-sync.yml  monitor-deployment.yml  notify-monorepo.yml  scheduled-sync.yml  schema-sync-check.yml  security-tests.yml  supabase-migrations.yml  sync-wiki.yml  test-secrets-diagnostic.yml  test.yml
api/: index.py
dashboards/: claude-code-metrics.json
docs/: ADDITIONAL_OPTIMIZATIONS.md  ADMIN_USERS_ENDPOINT_STRUCTURE.md  AGENTS.md  AGENT_INTEGRATION_GUIDE.md  AI_SDK_INTEGRATION.md  API-Mappings.md  APIDOG_DNS_RESOLVER_TROUBLESHOOTING.md  APIDOG_RUNNER_IMPLEMENTATION_SUMMARY.md  APIDOG_RUNNER_QUICKSTART.md  APIDOG_RUNNER_SETUP.md  API_KEY_TRACKING_FLOW.md  API_KEY_TRACKING_IMPROVEMENTS.md  APPLY_MIGRATION_NOW.md  ARCHITECTURE_PER_REQUEST_LIMITS_REMOVAL_PLAN.md  AUDIT_COMPLETION_CHECKLIST.md  AUTH_TIMEOUT_FIXES.md  AUTOMATED_SYNC_SCHEDULING.md  AUTO_SYNC_QUICK_START.md  BACKEND_ARCHITECTURE_3LAYERS.md  BACKEND_ERROR_FIXES.md  BILLING_FIXES_SUMMARY.md  CACHE_INVALIDATION_OPTIMIZATION.md  CACHE_MIGRATION_PLAN.md  CACHE_MIGRATION_REPORT.md  CACHE_POPULATION_AUDIT.md  CACHE_QUICK_REFERENCE.md  CANONICAL_MODELS_SCHEMA.md  CHAT_COMPLETION_REQUEST_TRACKING.md  CHAT_ENDPOINTS_AUDIT.md  CHAT_REQUESTS_ENDPOINTS_TEST_REPORT.md  CHAT_REQUESTS_TESTING_SUMMARY.md  CHAT_REQUESTS_VISUALIZATION_V2.md  CIRCUIT_BREAKERS.md  CM_UNIT_TEST_COVERAGE_REPORT.md  COHORT_ANALYSIS_SUMMARY.md  COMPLETE_MODEL_ID_REFACTORING_SUMMARY.md  CONCEPTUAL_MODEL.md  CONCEPTUAL_MODEL_UNIT_TESTING_PLAN.md  CREDIT_ERROR_HANDLING_IMPLEMENTATION.md  CREDIT_PREFLIGHT_CHECK.md  (+174 more)
docs/admin/: ADMIN_AUTHENTICATION_ANALYSIS.md  ADMIN_DISABLE_TRIAL_ENDPOINT.md  ADMIN_ENDPOINTS_SUMMARY.md  ADMIN_MIGRATION_COMPLETE.md  ADMIN_PANEL_IMPLEMENTATION_GUIDE.md  ADMIN_TIER_IMPLEMENTATION.md
docs/api/: ADMIN_MODEL_USAGE_ANALYTICS.md  errors.md
docs/archive/: ADMIN_USERS_SEARCH_IMPLEMENTATION_SUMMARY.md  CHAT_UNIFICATION_PROGRESS.md  DB_FIRST_IMPLEMENTATION_PROGRESS.md  GRAFANA_DASHBOARD_DESIGN_GUIDE.md  GRAFANA_ENDPOINTS_MAPPING.md  METRICS_INTEGRATION_GUIDE.md  METRICS_PARSER_QUICK_START.md  METRICS_REFACTOR_SUMMARY.md  MODEL_ID_MIGRATION_SUMMARY.md  PHASE_0_COMPLETION.md  PHASE_2.5_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION.md  PRICING_SYSTEM_SUMMARY.md  TESTING_DELIVERABLES_SUMMARY.md  v1_models_audit_report.md
docs/automation/: OPENROUTER_AUTO_VALIDATION.md
examples/: google_oauth2_jwt_example.py  plot_model_stats.py  search_models_with_stats_example.py  smart_caching_example.py
gatewayz/: pyvenv.cfg
gatewayz-js-hf/: package.json  tsconfig.json
gatewayz-py-hf/: __init__.py  client.py  setup.py  types.py
health-service/: .env 2.example  Dockerfile  main.py  railway 2.toml  requirements.txt
postman/: Chat_Completion_Tracking_Tests.postman_collection.json
redis-exporter/: Dockerfile
scripts/: README_VERIFICATION.md  README_performance_tests.md  add_circuit_breakers.py  analyze_models_performance.sql  apply_pricing_migration.py  audit_gateway_keys.py  audit_malformed_model_names.py  audit_model_names.py  audit_unused_tables.py  backfill_canonical_ids.py  backfill_model_categories.py  backfill_quality_scores.py  check_actual_tables.py  check_and_sync_pricing.py  check_architecture_per_request_limits.sql  check_backend_errors.sh  check_database_state.sh  check_db_pricing.py  check_db_pricing_direct.py  check_error_patterns.sh  check_latest_models.py  check_models_indexes.py  check_optimization_applied.sql  check_optimization_status.py  check_prod_db_direct.py  check_production_tables.py  check_provider_model_counts.py  check_providers_models.py  check_providers_without_models.py  check_remote_tables.py  check_sync_status.py  check_tables.py  check_tables_direct.py  check_user_keys.py  cleanup_malformed_model_names.py  cleanup_stuck_pricing_syncs.sh  clear_stuck_sync.py  compare_cache_vs_db_output.py  compare_sql_results.py  create-admin-user.sql  (+85 more)
src/: backfill_legacy_keys.py  cache.py  constants.py  db_security.py  enhanced_notification_service.py  main.py  models.py  redis_config.py  test_claude_workflow.py
supabase/: config.toml  seed.sql
tempo/: Dockerfile  tempo.yml
tests/: README.md  conftest.py  factories.py  test_admin_stats_growth_fix.py  test_auth_timeout_fixes.py  test_bot_filter_span_processor.py  test_cache.py  test_canonical_registry.py  test_claude_workflow_test.py  test_dispatch_trigger.py  test_health_alerting.py  test_huggingface_hub_integration.py  test_intelligent_health_monitor.py  test_loki_logging_performance.py  test_metrics_parser.py  test_multi_provider_routing.py  test_observability_middleware.py  test_prometheus_metrics.py  test_schemas.py  test_status_page.py
(+1410 files in other folders)
